[build-system]
requires = [
    "scikit-build-core>=0.9",
    "wheel",
    "cython",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyvoro"
version = "1.3.3"
description = "2D and 3D Voronoi tessellations: Python bindings for voro++"
readme = "README.md"
authors = [
    { name = "Joe Jordan", email = "joe.jordan@imperial.ac.uk" }
]
license = { text = "BSD" }
requires-python = ">=3.8"
keywords = ["geometry", "Voronoi", "mathematics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows"
]

[tool.scikit-build]
wheel.packages = ["pyvoro"]

[tool.scikit-build.cmake]
minimum-version = "3.18"

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "17"